--- a/ui/src/app/view/vessel/vessel.component.html
+++ b/ui/src/app/view/vessel/vessel.component.html
@@ -6,8 +6,7 @@
       <div class="vessel__content__first">
         <div class="vessel__select_modify">
           <div class="dropDownDiv">
-            <p-dropdown (onChange)="selectVessel()" [(ngModel)]="selectedVessel" [filter]="true" [options]="vessels"
-                        autofocus="true"></p-dropdown>
+            <p-dropdown (onChange)="selectVessel()" [(ngModel)]="selectedVessel" [filter]="true" [options]="vessels"></p-dropdown>
           </div>
 
           <div class="vessel__select_modify__buttons">
@@ -25,6 +24,7 @@
     </div>
   </p-card>
 </div>
+<p-toast key="vesselNotSelectedWarning" position="bottom-right"></p-toast>
 <p-toast key="vesselUpdateSuccess" position="bottom-right"></p-toast>
 <p-toast key="vesselUpdateError" position="bottom-right"></p-toast>
 <p-toast key="vesselAddSuccess" position="bottom-right"></p-toast>
