--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -85,7 +85,7 @@
   <div class="p-grid">
     <div class="p-col-8">
     </div>
-    <div class="p-col-4 footer_option" style="; justify-content: flex-end">
+    <div class="p-col-4 footer_option" style="justify-content: flex-end">
       <p-button class="footer_option__buttons"
                 icon="pi pi-times-circle" label="{{'general.close.label' | translate}}" iconPos="left">
       </p-button>
