--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -123,7 +123,7 @@
 
   <div class="p-field p-col-12 p-md-6">
     <span class="p-float-label">
-    <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.changeComment"
+    <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.remark"
     ></textarea>
     <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
     </span>
