--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -39,6 +39,7 @@
       <th style="width:10%">{{'general.transportCall.table.UNLocationCode.secondLabel'| translate}}</th>
       <th style="width:10%">{{'general.transportCall.table.facilityTypeCode.label'| translate}}</th>
       <th style="width:15%">{{'general.table.header.terminalId.label'| translate}}</th>
+      <th style="width:15%">{{'general.transportCall.table.estimatedDateofArrival.label'| translate}}</th>
       <th style="width:15%">{{'general.transportCall.table.carrierVoyageNumber.label'| translate}}</th>
       <th style="width:15%">{{'general.transportCall.table.carrierServiceCode.label'| translate}}</th>
     </tr>
@@ -50,6 +51,7 @@
       <td>{{transportCall.UNLocationCode}}</td>
       <td>{{transportCall.facilityTypeCode}}</td>
       <td>{{transportCall.facilityCode}}</td>
+      <td>{{transportCall.estimatedDateofArrival}}</td>
       <td>{{transportCall.carrierVoyageNumber}}</td>
       <td>{{transportCall.carrierServiceCode}}</td>
     </tr>
