--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -86,10 +86,12 @@
         {{ 'general.table.header.terminalId.label' | translate }}
         <p-sortIcon field="terminal" class="timestampContent"></p-sortIcon>
       </th>
-      <th style="width: 4%" >
-      </th>
       <th style="width: 6%" pTooltip="{{ 'general.table.header.comment.tooltip' | translate }}" tooltipPosition="top"
           tooltipStyleClass="ToolTipClass" class="timestampContent"></th>
+      <th style="width: 4%" >
+      </th>
+      <th style="width: 4%" >
+      </th>
     </tr>
     <tr>
       <td></td>
@@ -108,7 +110,7 @@
 
     </tr>
   </ng-template>
-  <ng-template pTemplate="body" let-timestamp>
+  <ng-template pTemplate="body" let-timestamp >
     <tr class="unreadTimestamp">
       <td pTooltip="Event ID: {{timestamp.id}}
         Publisher: {{timestamp.publisher}}
@@ -164,14 +166,19 @@
       </td>
       <td
         [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  "
-        style="width: 7%"></td>
+        style="width: 7%">
    <!--     <div
           [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">{{ (timestamp.portNext | portIdToPort: ports).unLocode}}</div>
         <div class="rowDetails">{{ (timestamp.portNext | portIdToPort: ports).name}}</div>
       </td>
       <td style="width: 7%"
-          [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">{{ timestamp.direction }}</td>
+          [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">{{ timestamp.direction }}
      -->
+    <div *ngIf="isOutGoing(timestamp)">Outgoing</div>
+    <div *ngIf="!isOutGoing(timestamp)">Ingoing</div>
+    
+    </td>
+     
       
       <td style="width: 4%"
           [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
