--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -1,20 +1,51 @@
 <form [formGroup]="transportCallFormGroup">
   <div class="p-fluid p-formgrid p-grid">
+
+
+    <!-- irrelevant, we send entire Vessel object along anyway -->
+    <!--    <div class="p-field p-col-12 p-md-4">-->
+    <!--      <h4>{{ 'general.vessel.label' | translate }}</h4>-->
+    <!--      <label for="vesselIMO">{{ 'general.vessel.number' | translate }}:</label>-->
+    <!--      <input id="vesselIMO" formControlName="imo" pInputText style="width: 100%" type="text" />-->
+    <!--      <span *ngIf="transportCallFormGroup.get('imo').hasError('required') && transportCallFormGroup.get('imo').touched"-->
+    <!--        class="p-invalid">-->
+    <!--        {{ 'general.transportCall.validation.vessel.empty' | translate }}-->
+    <!--      </span>-->
+    <!--      <span *ngIf="transportCallFormGroup.get('imo').hasError('pattern')" class="p-invalid">-->
+    <!--        {{ 'general.transportCall.validation.vessel.length' | translate }}-->
+    <!--      </span>-->
+    <!--      <span *ngIf="transportCallFormGroup.get('imo').hasError('maxlength')" class="p-invalid">-->
+    <!--        {{ 'general.transportCall.validation.vessel.lenght' | translate }}-->
+    <!--      </span>-->
+    <!--    </div>-->
+
+
     <div class="p-field p-col-12 p-md-4">
-      <h4>{{ 'general.vessel.label' | translate }}</h4>
-      <label for="vesselIMO">{{ 'general.vessel.number' | translate }}:</label>
-      <input id="vesselIMO" formControlName="imo" pInputText style="width: 100%" type="text" />
-      <span *ngIf="transportCallFormGroup.get('imo').hasError('required') && transportCallFormGroup.get('imo').touched"
+      <label for="serviceCode">{{ 'general.transportCall.table.carrierServiceCode.label' | translate }}:</label>
+      <input id="serviceCode" formControlName="serviceCode" pInputText style="width: 100%" type="text"/>
+      <span
+        *ngIf="transportCallFormGroup.get('serviceCode').hasError('required') && transportCallFormGroup.get('serviceCode').touched"
         class="p-invalid">
-        {{ 'general.transportCall.validation.vessel.empty' | translate }}
-      </span>
-      <span *ngIf="transportCallFormGroup.get('imo').hasError('pattern')" class="p-invalid">
-        {{ 'general.transportCall.validation.vessel.length' | translate }}
-      </span>
-      <span *ngIf="transportCallFormGroup.get('imo').hasError('maxlength')" class="p-invalid">
-        {{ 'general.transportCall.validation.vessel.lenght' | translate }}
-      </span>
+            {{ 'general.transportCall.validation.carrierServiceCode.empty' | translate }}
+          </span>
+      <span *ngIf="transportCallFormGroup.get('serviceCode').hasError('maxlength')" class="p-invalid">
+            {{ 'general.transportCall.validation.carrierServiceCode.length' | translate }}
+          </span>
     </div>
+
+    <div class="p-field p-col-12 p-md-4">
+      <label for="voyageNumber">{{ 'general.transportCall.table.carrierVoyageNumber.label' | translate }}:</label>
+      <input id="voyageNumber" formControlName="voyageNumber" pInputText style="width: 100%" type="text"/>
+      <span
+        *ngIf="transportCallFormGroup.get('voyageNumber').hasError('required') && transportCallFormGroup.get('voyageNumber').touched"
+        class="p-invalid">
+            {{ 'general.transportCall.validation.carrierVoyageNumber.empty' | translate }}
+          </span>
+      <span *ngIf="transportCallFormGroup.get('voyageNumber').hasError('maxlength')" class="p-invalid">
+            {{ 'general.transportCall.validation.carrierVoyageNumber.length' | translate }}
+          </span>
+    </div>
+
 
     <div class="p-field p-col-12 p-md-8"></div>
 
@@ -25,7 +56,7 @@
         <div class="p-field p-col-12 p-md-4">
           <label for="portOfCall">{{ 'general.port.ofCall' | translate }}:</label>
           <p-dropdown appendTo="body" formControlName="port" id="portOfCall" class="portOfCall__dropDown"
-            [options]="portOptions" [filter]="true" (onChange)="portSelected()" filterBy="label,value.name">
+                      [options]="portOptions" [filter]="true" (onChange)="portSelected()" filterBy="label,value.name">
             <ng-template let-port pTemplate="item">
               <div *ngIf="!port.value">
                 <div>Select port</div>
@@ -43,7 +74,7 @@
         <div class="p-field p-col-12 p-md-4">
           <label for="terminal">{{ 'general.terminal.label' | translate }}:</label>
           <p-dropdown appendTo="body" formControlName="terminal" id="terminal" class="portOfCall__dropDown"
-            [options]="terminalOptions" [filter]="true" filterBy="label,value.name">
+                      [options]="terminalOptions" [filter]="true" filterBy="label,value.name">
             <ng-template let-terminal pTemplate="item">
               <div *ngIf="!terminal.value">
                 <div>Select Terminal</div>
@@ -59,63 +90,86 @@
           </span>
         </div>
         <div class="p-field p-col-12 p-md-4"></div>
-        <div class="p-field p-col-12 p-md-4">
-          <label for="sequenceNumber">{{ 'general.transportCall.table.transportCallSequenceNumber.label' | translate }}
-            :</label>
-          <input formControlName="callSequenceNumber" id="sequenceNumber" pInputText style="width: 100%" type="text" />
-          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('required')" class="p-invalid">
-            {{ 'general.transportCall.validation.sequenceNumber.empty' | translate }}
-          </span>
-          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('max')" class="p-invalid">
-            {{ 'general.transportCall.validation.sequenceNumber.length' | translate }}
-          </span>
-          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('min')" class="p-invalid">
-            {{ 'general.transportCall.validation.sequenceNumber.length' | translate }}
-          </span>
-        </div>
-        <div class="p-field p-col-12 p-md-8">
-        </div>
+
+        <!-- hardcoded to 1 -->
+        <!--        <div class="p-field p-col-12 p-md-4">-->
+        <!--          <label for="sequenceNumber">{{ 'general.transportCall.table.transportCallSequenceNumber.label' | translate }}-->
+        <!--            :</label>-->
+        <!--          <input formControlName="callSequenceNumber" id="sequenceNumber" pInputText style="width: 100%" type="text" />-->
+        <!--          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('required')" class="p-invalid">-->
+        <!--            {{ 'general.transportCall.validation.sequenceNumber.empty' | translate }}-->
+        <!--          </span>-->
+        <!--          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('max')" class="p-invalid">-->
+        <!--            {{ 'general.transportCall.validation.sequenceNumber.length' | translate }}-->
+        <!--          </span>-->
+        <!--          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('min')" class="p-invalid">-->
+        <!--            {{ 'general.transportCall.validation.sequenceNumber.length' | translate }}-->
+        <!--          </span>-->
+        <!--        </div>-->
+        <!--        <div class="p-field p-col-12 p-md-8">-->
+        <!--        </div>-->
 
       </div>
     </div>
 
 
-    <!-- Vessels? -->
-    <div class="p-field p-col-12 p-md-12">
-      <h4>{{ 'general.port.label' | translate }}</h4>
-        <div class="p-field p-col-12 p-md-4">
-          <label for="portOfCall">{{ 'general.port.ofCall' | translate }}:</label>
-          <p-dropdown appendTo="body" formControlName="vessel" id="vessels" class="vessels__dropDown"
-            [options]="vesselOptions" [filter]="true" (onChange)="portSelected()" filterBy="label,value.name">
-            <ng-template let-vessel pTemplate="item">
-              <div *ngIf="!vessel.value">
-                <div>Select vessel</div>
-              </div>
-              <div *ngIf="vessel.value">
-                <div>{{vessel.value.vesselName}}</div>
-                <div class="portListName">{{vessel.value.name}}</div>
-              </div>
-            </ng-template>
-          </p-dropdown>
-          <span *ngIf="transportCallFormGroup.get('vessel').hasError('required')" class="p-invalid">
-            {{ 'general.transportCall.validation.port.empty' | translate }}
-          </span>
-        </div>
+    <!-- Vessels -->
+    <div class="p-field p-col-12 p-md-4">
+      <label for="vessels">{{ 'general.vessel.label' | translate }}:</label>
+      <p-dropdown appendTo="body" formControlName="vessel" id="vessels" class="vessels__dropDown"
+                  [options]="vesselOptions" [filter]="true" (onChange)="portSelected()" filterBy="label,value.name">
+        <ng-template let-vessel pTemplate="item">
+          <div *ngIf="!vessel.value">
+            <div>Select vessel</div>
+          </div>
+          <div *ngIf="vessel.value">
+            <div>{{vessel.value.vesselName}}</div>
+            <div class="portListName">{{vessel.value.name}}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+      <span *ngIf="transportCallFormGroup.get('vessel').hasError('required')" class="p-invalid">
+        {{ 'general.transportCall.validation.vessel.noVesselSelected' | translate }}
+      </span>
     </div>
+
+    <!-- FacilityCodeListProvider -->
+    <!--    <div class="p-field p-col-12 p-md-12">-->
+    <!--      <h4>{{ 'general.port.label' | translate }}</h4>-->
+    <!--        <div class="p-field p-col-12 p-md-4">-->
+    <!--          <label for="portOfCall">{{ 'general.port.ofCall' | translate }}:</label>-->
+    <!--          <p-dropdown appendTo="body" formControlName="facilityCodeListProvider" id="facilityCodeListProviders" class="facilityCodeListProviders__dropDown"-->
+    <!--            [options]="facilityCodeListProviderOptions" [filter]="true" (onChange)="portSelected()" filterBy="label,value.name">-->
+    <!--            <ng-template let-facilityCodeListProvider pTemplate="item">-->
+    <!--              <div *ngIf="!facilityCodeListProvider.value">-->
+    <!--                <div>Select facilityCodeListProvider</div>-->
+    <!--              </div>-->
+    <!--              <div *ngIf="facilityCodeListProvider.value">-->
+    <!--                <div>{{facilityCodeListProvider.value.toString()}}</div>-->
+    <!--                <div class="portListName">{{facilityCodeListProvider.value}}</div>-->
+    <!--              </div>-->
+    <!--            </ng-template>-->
+    <!--          </p-dropdown>-->
+    <!--          <span *ngIf="transportCallFormGroup.get('vessel').hasError('required')" class="p-invalid">-->
+    <!--            {{ 'general.transportCall.validation.port.empty' | translate }}-->
+    <!--          </span>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
   </div>
   <div class="p-grid">
     <div class="p-col-8">
     </div>
     <div class="p-col-4 footer_option" style="justify-content: flex-end">
-      <p-button class="footer_option__buttons" icon="pi pi-times-circle" label="{{'general.close.label' | translate}}"
-        iconPos="left">
+      <p-button class="footer_option__buttons" icon="pi pi-times-circle" (onClick)="close()"
+                label="{{'general.close.label' | translate}}"
+                iconPos="left">
       </p-button>
       <p-button label="{{'general.transportCall.create' | translate}}" iconPos="left" class="footer_option__buttons"
-        icon="pi pi-save" (onClick)="saveNewTransportCall()" [disabled]="transportCallFormGroup.invalid">
+                icon="pi pi-save" (onClick)="saveNewTransportCall()" [disabled]="transportCallFormGroup.invalid">
 
         <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}"
-          styleClass="custom-spinner" strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
+                           styleClass="custom-spinner" strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
       </p-button>
 
     </div>
