show eventDeliveryStatus on timestamps

--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -176,6 +176,7 @@
      -->
     <div *ngIf="isOutGoing(timestamp)">Outgoing</div>
     <div *ngIf="!isOutGoing(timestamp)">Ingoing</div>
+    <div>{{ timestamp.eventDeliveryStatus }}</div>
     
     </td>
      
