--- a/ui/src/app/view/timestamp-table/timestamp-table.component.scss
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.scss
@@ -27,8 +27,6 @@
   font-size: 12px;
 }
 
-.dateTimeStamp {
-}
 
 .dummyContent{
    width: 98vw;
@@ -79,5 +77,17 @@
   text-shadow: none;
 }
 
+.ingoing, .outgoingDelivered{
+  background-color: black;
+  transform: scale(0.25);
+}
 
+.outgoingPending{
+  background-color: rgb(240, 227, 46);
+  transform: scale(0.25);
+}
 
+.outgoingAttempted{
+  background-color:rgb(223, 83, 27);
+  transform: scale(0.25);
+}
